adding a new string for selecting text

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -256,6 +256,7 @@
     <string name="share">مشاركة</string>
     <string name="share_via">مشاركة عبر</string>
     <string name="select_all">تحديد الكل</string>
+    <string name="select_text">Select text</string>
     <string name="hide">إخفاء</string>
     <string name="unhide">إظهار</string>
     <string name="hide_folder">إخفاء المجلد</string>
