--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Paylaş</string>
     <string name="share_via">Paylaş</string>
     <string name="select_all">Hamsını seç</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Gizlət</string>
     <string name="unhide">Gizlətmə</string>
     <string name="hide_folder">Qovluğu gizlət</string>
