--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Compartir</string>
     <string name="share_via">Compartir amb</string>
     <string name="select_all">Seleccionar tot</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Ocultar</string>
     <string name="unhide">Mostrar</string>
     <string name="hide_folder">Amagar carpeta</string>
