--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -262,6 +262,7 @@
     <string name="share">Sdílet</string>
     <string name="share_via">Sdílet pomocí</string>
     <string name="select_all">Označit vše</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Skrýt</string>
     <string name="unhide">Odkrýt</string>
     <string name="hide_folder">Skrýt složku</string>
