--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -270,6 +270,7 @@
     <string name="share">Rhannu</string>
     <string name="share_via">Rhannu gyda</string>
     <string name="select_all">Dewis y cwbl</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Cuddio</string>
     <string name="unhide">Datguddio</string>
     <string name="hide_folder">Cuddio ffolder</string>
