--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Κοινόχρηστο</string>
     <string name="share_via">Κοινόχρηστο μέσω</string>
     <string name="select_all">Επιλογή όλων</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Απόκρυψη</string>
     <string name="unhide">Επανεμφάνιση</string>
     <string name="hide_folder">Απόκρυψη φακέλου</string>
