--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Partekatu</string>
     <string name="share_via">Partekatu honen bidez:</string>
     <string name="select_all">Hautatu denak</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Ezkutatu</string>
     <string name="unhide">Erakutsi</string>
     <string name="hide_folder">Ezkutatu karpeta</string>
