--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Jaa</string>
     <string name="share_via">Jaa sovelluksella</string>
     <string name="select_all">Valitse kaikki</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Piilota</string>
     <string name="unhide">Näytä piilotetut</string>
     <string name="hide_folder">Piilota kansio</string>
