--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Partager</string>
     <string name="share_via">Partager via</string>
     <string name="select_all">Tout sélectionner</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Cacher</string>
     <string name="unhide">Ne plus cacher</string>
     <string name="hide_folder">Cacher le dossier</string>
