--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -261,6 +261,7 @@
     <string name="share">Dijeli</string>
     <string name="share_via">Dijeli preko</string>
     <string name="select_all">Odaberi sve</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Sakrij</string>
     <string name="unhide">Otkrij</string>
     <string name="hide_folder">Sakrij mapu</string>
