--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -257,6 +257,7 @@
     <string name="share">Megosztás</string>
     <string name="share_via">Megosztva ezzel</string>
     <string name="select_all">Összes kiválasztása</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Elrejtés</string>
     <string name="unhide">Elrejtés megszüntetés</string>
     <string name="hide_folder">Mappa elrejtése</string>
