--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">שתף</string>
     <string name="share_via">שתף דרך</string>
     <string name="select_all">בחר הכל</string>
+    <string name="select_text">Select text</string>
     <string name="hide">הסתר</string>
     <string name="unhide">בטל הסתרה</string>
     <string name="hide_folder">הסתר תיקייה</string>
