--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -255,6 +255,7 @@
     <string name="share">共有</string>
     <string name="share_via">共有</string>
     <string name="select_all">すべて選択</string>
+    <string name="select_text">Select text</string>
     <string name="hide">非表示</string>
     <string name="unhide">再表示</string>
     <string name="hide_folder">フォルダを非表示</string>
