--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Dalintis</string>
     <string name="share_via">Dalintis per</string>
     <string name="select_all">Pasirinkti viską</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Slėpti</string>
     <string name="unhide">Neslėpti</string>
     <string name="hide_folder">Slėpti aplanką</string>
