--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Delen</string>
     <string name="share_via">Delen via</string>
     <string name="select_all">Alles selecteren</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Verbergen</string>
     <string name="unhide">Tonen</string>
     <string name="hide_folder">Map verbergen</string>
