--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -259,6 +259,7 @@
     <string name="share">Udostępnij</string>
     <string name="share_via">Udostępnij w</string>
     <string name="select_all">Zaznacz wszystko</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Ukryj</string>
     <string name="unhide">Odkryj</string>
     <string name="hide_folder">Ukryj folder</string>
