--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -261,7 +261,8 @@
     <string name="rename">Premenovať</string>
     <string name="share">Zdieľať</string>
     <string name="share_via">Zdieľať cez</string>
-    <string name="select_all">Vybrať všetko</string>
+    <string name="select_all">Označiť všetko</string>
+    <string name="select_text">Označiť text</string>
     <string name="hide">Skryť</string>
     <string name="unhide">Odkryť</string>
     <string name="hide_folder">Skryť priečinok</string>
