--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -263,6 +263,7 @@
     <string name="share">Deli</string>
     <string name="share_via">Deli preko</string>
     <string name="select_all">Izberi vse</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Skrij</string>
     <string name="unhide">Odkrij</string>
     <string name="hide_folder">Skrij mapo</string>
