--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -257,6 +257,7 @@
     <string name="share">Подели</string>
     <string name="share_via">Подели путем</string>
     <string name="select_all">Означи све</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Сакриј</string>
     <string name="unhide">Прикажи</string>
     <string name="hide_folder">Склони фасциклу</string>
