--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Поділитися</string>
     <string name="share_via">Поділитися через</string>
     <string name="select_all">Обрати все</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Приховати</string>
     <string name="unhide">Показати</string>
     <string name="hide_folder">Приховати теку</string>
