--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Chia sẻ</string>
     <string name="share_via">Chia sẻ qua</string>
     <string name="select_all">Chọn tất cả</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Ẩn</string>
     <string name="unhide">Bỏ ẩn</string>
     <string name="hide_folder">Ẩn thư mục</string>
