--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -255,6 +255,7 @@
     <string name="share">分享</string>
     <string name="share_via">分享到</string>
     <string name="select_all">全选</string>
+    <string name="select_text">Select text</string>
     <string name="hide">隐藏</string>
     <string name="unhide">取消隐藏</string>
     <string name="hide_folder">隐藏文件夹</string>
