--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -255,6 +255,7 @@
     <string name="share">分享</string>
     <string name="share_via">分享方式</string>
     <string name="select_all">全選</string>
+    <string name="select_text">Select text</string>
     <string name="hide">隱藏</string>
     <string name="unhide">取消隱藏</string>
     <string name="hide_folder">隱藏資料夾</string>
