--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Del</string>
     <string name="share_via">Del via</string>
     <string name="select_all">Vælg alle</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Skjul</string>
     <string name="unhide">Vis</string>
     <string name="hide_folder">Skjul mappe</string>
