--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -255,6 +255,7 @@
     <string name="share">Bagikan</string>
     <string name="share_via">Bagikan via</string>
     <string name="select_all">Pilih semua</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Sembunyikan</string>
     <string name="unhide">Tampilkan</string>
     <string name="hide_folder">Sembunyikan folder</string>
