--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Condividi</string>
     <string name="share_via">Condividi via</string>
     <string name="select_all">Seleziona tutto</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Nascondi</string>
     <string name="unhide">Non nascondere</string>
     <string name="hide_folder">Nascondi cartella</string>
