--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -253,6 +253,7 @@
     <string name="share">공유</string>
     <string name="share_via">공유 방법</string>
     <string name="select_all">전체 선택</string>
+    <string name="select_text">Select text</string>
     <string name="hide">숨김</string>
     <string name="unhide">숨김 해제</string>
     <string name="hide_folder">폴더 숨김</string>
