--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Del</string>
     <string name="share_via">Del via</string>
     <string name="select_all">Velg alle</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Skjul</string>
     <string name="unhide">Ikke skjul</string>
     <string name="hide_folder">Skjul mappe</string>
