--- a/commons/src/main/res/values-no/strings.xml
+++ b/commons/src/main/res/values-no/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Del</string>
     <string name="share_via">Del via</string>
     <string name="select_all">Select all</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Hide</string>
     <string name="unhide">Unhide</string>
     <string name="hide_folder">Hide folder</string>
