--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Compartilhar</string>
     <string name="share_via">Compartilhar via</string>
     <string name="select_all">Selecionar tudo</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Ocultar</string>
     <string name="unhide">Exibir</string>
     <string name="hide_folder">Ocultar pasta</string>
