--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Partilhar</string>
     <string name="share_via">Partilhar por</string>
     <string name="select_all">Selecionar tudo</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Ocultar</string>
     <string name="unhide">Mostrar</string>
     <string name="hide_folder">Ocultar pasta</string>
