--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -262,6 +262,7 @@
     <string name="share">Поделиться</string>
     <string name="share_via">Поделиться через…</string>
     <string name="select_all">Выделить все</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Скрыть</string>
     <string name="unhide">Показать</string>
     <string name="hide_folder">Скрыть папку</string>
