--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Dela</string>
     <string name="share_via">Dela via</string>
     <string name="select_all">Välj alla</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Dölj</string>
     <string name="unhide">Visa</string>
     <string name="hide_folder">Dölj mapp</string>
