--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -258,6 +258,7 @@
     <string name="share">Paylaş</string>
     <string name="share_via">Şununla paylaş</string>
     <string name="select_all">Tümünü seç</string>
+    <string name="select_text">Select text</string>
     <string name="hide">Gizle</string>
     <string name="unhide">Göster</string>
     <string name="hide_folder">Klasörü gizle</string>
