adding a custom sorting related string

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -292,6 +292,7 @@
     <string name="middle_name">Mellemnavn</string>
     <string name="surname">Efternavn</string>
     <string name="full_name">Full name</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Er du sikker på at du vil fortsætte med at slette?</string>
