--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -292,6 +292,7 @@
     <string name="middle_name">Zweiter Vorname</string>
     <string name="surname">Nachname</string>
     <string name="full_name">Vollständiger Name</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Willst du mit dem Löschen fortfahren?</string>
