--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -292,6 +292,7 @@
     <string name="middle_name">Bigarren izena</string>
     <string name="surname">Abizena</string>
     <string name="full_name">Izen-abizenak</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ziur zaude ezabatzearekin jarraitu nahi duzula?</string>
