--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -292,6 +292,7 @@
     <string name="middle_name">Deuxième prénom</string>
     <string name="surname">Nom</string>
     <string name="full_name">Nom complet</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Voulez-vous vraiment effectuer la suppression ?</string>
