--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -296,6 +296,7 @@
     <string name="middle_name">Stredné meno</string>
     <string name="surname">Priezvisko</string>
     <string name="full_name">Celé meno</string>
+    <string name="use_custom_sorting">Použiť vlastné zoradenie</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ste si istý, že chcete pokračovať s vymazaním?</string>
