--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -289,6 +289,7 @@
     <string name="middle_name">中間名</string>
     <string name="surname">姓氏</string>
     <string name="full_name">Full name</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">確定要進行刪除嗎?</string>
