--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -296,6 +296,7 @@
     <string name="middle_name">Prostřední jméno</string>
     <string name="surname">Příjmení</string>
     <string name="full_name">Celé jméno</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Opravdu chcete smazat dané soubory/složky?</string>
