--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -292,6 +292,7 @@
     <string name="middle_name">Secondo nome</string>
     <string name="surname">Cognome</string>
     <string name="full_name">Full name</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Procedere davvero con l\'eliminazione?</string>
