--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -292,6 +292,7 @@
     <string name="middle_name">שם אמצעי</string>
     <string name="surname">שם משפחה</string>
     <string name="full_name">שם מלא</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">להמשיך במחיקה?</string>
