--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -292,6 +292,7 @@
     <string name="middle_name">Nome do meio</string>
     <string name="surname">Sobrenome</string>
     <string name="full_name">Full name</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Deseja realmente excluir?</string>
