--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -296,6 +296,7 @@
     <string name="middle_name">Отчество</string>
     <string name="surname">Фамилия</string>
     <string name="full_name">Полное имя</string>
+    <string name="use_custom_sorting">Use custom sorting</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Подтверждение удаления</string>
