adding a new string for changing the order

--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -305,6 +305,7 @@
     <string name="surname">Cyfenw</string>
     <string name="full_name">Full name</string>
     <string name="use_custom_sorting">Use custom sorting</string>
+    <string name="change_order">Change order</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Wyt ti\'n bendant am barhau i ddileu?</string>
