--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -297,6 +297,7 @@
     <string name="surname">Priezvisko</string>
     <string name="full_name">Celé meno</string>
     <string name="use_custom_sorting">Použiť vlastné zoradenie</string>
+    <string name="change_order">Zmeniť poradie</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ste si istý, že chcete pokračovať s vymazaním?</string>
