--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -293,6 +293,7 @@
     <string name="surname">שם משפחה</string>
     <string name="full_name">שם מלא</string>
     <string name="use_custom_sorting">Use custom sorting</string>
+    <string name="change_order">Change order</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">להמשיך במחיקה?</string>
