--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -293,6 +293,7 @@
     <string name="surname">Apelido</string>
     <string name="full_name">Nome completo</string>
     <string name="use_custom_sorting">Use custom sorting</string>
+    <string name="change_order">Change order</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Tem a certeza de que deseja continuar com a eliminação?</string>
