--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -293,6 +293,7 @@
     <string name="surname">Surname</string>
     <string name="full_name">Full name</string>
     <string name="use_custom_sorting">Use custom sorting</string>
+    <string name="change_order">Change order</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Bạn có chắc chắn muốn tiến hành xóa?</string>
