--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -193,7 +193,7 @@
     <string name="properties">Propriétés</string>
     <string name="path">Emplacement</string>
     <string name="items_selected">Éléments sélectionnés</string>
-    <string name="direct_children_count">Nombre total de fichiers entrants directs</string>
+    <string name="direct_children_count">Nombre de fichiers directs</string>
     <string name="files_count">Nombre total de fichiers</string>
     <string name="resolution">Résolution</string>
     <string name="duration">Durée</string>
@@ -292,8 +292,8 @@
     <string name="middle_name">Deuxième prénom</string>
     <string name="surname">Nom</string>
     <string name="full_name">Nom complet</string>
-    <string name="use_custom_sorting">Use custom sorting</string>
-    <string name="change_order">Change order</string>
+    <string name="use_custom_sorting">Utiliser le tri personnalisé</string>
+    <string name="change_order">Changer l'ordre</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Voulez-vous vraiment effectuer la suppression ?</string>
