escaping an apostrophe

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -293,7 +293,7 @@
     <string name="surname">Nom</string>
     <string name="full_name">Nom complet</string>
     <string name="use_custom_sorting">Utiliser le tri personnalisé</string>
-    <string name="change_order">Changer l'ordre</string>
+    <string name="change_order">Changer l\'ordre</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Voulez-vous vraiment effectuer la suppression ?</string>
